--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <html lang="en">
 <head>
 	<title>Inicio</title>
-	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
 	<link rel="icon" type="image/png" href="{% static 'catalogo/images/icons/favicon.png' %}"/>
@@ -130,7 +129,7 @@
 								</a>
 
 								<span class="header-cart-item-info">
-									1 x $17.00
+									Todo es muy caro
 								</span>
 							</div>
 						</li>
@@ -164,7 +163,7 @@
 	<!-- <div class="flex-c-m size22 bg0 s-text21 pos-relative">
 		20% off everything!
 		<a href="product.html" class="s-text22 hov6 p-l-5">
-			Shop Now
+			FAbricio Caicedo Mosquera
 		</a>
 
 		<button class="flex-c-m pos2 size23 colorwhite eff3 trans-0-4 btn-romove-top-noti">
